<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Art Widget</string>
    <string name="widget_description">Generated art for your home screen</string>
    <string name="art_preview">Art preview</string>
    <string name="btn_new">New</string>
    <string name="btn_pattern">Pattern</string>
    <string name="btn_colours">Colours</string>
    <string name="btn_save">Save</string>
    <string name="btn_patterns">Patterns</string>
    <string name="btn_share">Share</string>
    <string name="saved_label">Saved</string>
    <string name="saved">Saved</string>
    <string name="already_saved">Already saved</string>
    <string name="delete_title">Delete this saved art?</string>
    <string name="delete">Delete</string>
    <string name="patterns_title">Patterns</string>
    <string name="done">Done</string>
    <string name="share_title">Share</string>
    <string name="close">Close</string>
    <string name="current_code_label">Current art code</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied to clipboard</string>
    <string name="import_label">Paste a code to import</string>
    <string name="import_hint">{&#8220;v&#8221;:1,&#8230;}</string>
    <string name="btn_import">Import</string>
    <string name="imported">Imported</string>
    <string name="invalid_code">That code isn\'t valid</string>
    <string name="unknown_pattern">Unknown pattern in code</string>
    <string name="btn_auto">Auto</string>
    <string name="auto_refresh_title">Auto-refresh widget</string>
    <string name="interval_off">Off</string>
    <string name="interval_30m">Every 30 minutes</string>
    <string name="interval_hourly">Hourly</string>
    <string name="interval_6h">Every 6 hours</string>
    <string name="interval_daily">Daily</string>
    <string name="btn_wallpaper">Wallpaper</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="wallpaper_switch">Set art as wallpaper</string>
    <string name="wallpaper_applied">Wallpaper set</string>
    <string name="wallpaper_solid_label">Solid area from bottom: %1$d%%</string>
    <string name="divide_label">Divide style</string>
    <string name="divide_random">Random</string>
    <string name="divide_line">Line</string>
    <string name="divide_arc">Arc</string>
    <string name="divide_fade">Fade</string>
    <string name="divide_wave">Wave</string>
    <string name="divide_scallop">Scallop</string>
    <string name="divide_zigzag">Zigzag</string>
    <string name="divide_diagonal">Diagonal</string>
    <string name="divide_mountains">Mountains</string>
    <string name="lock_label">Lock</string>

    <!-- Order must match Wallpaper.STYLES, with Random first. -->
    <string-array name="divide_options">
        <item>@string/divide_random</item>
        <item>@string/divide_line</item>
        <item>@string/divide_arc</item>
        <item>@string/divide_fade</item>
        <item>@string/divide_wave</item>
        <item>@string/divide_scallop</item>
        <item>@string/divide_zigzag</item>
        <item>@string/divide_diagonal</item>
        <item>@string/divide_mountains</item>
    </string-array>
</resources>
